crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@assign_variable_and_trace.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: builder
input_file: samples/as2/assign_variable_and_trace.as
---
ConstantPool "message", "Hello World"
Push constant0
Push constant1
DefineLocal
Push constant0
GetVariable
Trace
