crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@block.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/block.as
---
ConstantPool "outside", "visible", "inside", "outside: ", ", inside: "
Push constant0, constant1
DefineLocal
Push constant2, constant1
DefineLocal
Push constant3, constant0
GetVariable
Add2
Push constant4
Add2
Push constant2
GetVariable
Add2
Trace
Push constant3, constant0
GetVariable
Add2
Push constant4
Add2
Push constant2
GetVariable
Add2
Trace
