crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@for_loop.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/for_loop.as
---
ConstantPool "for_classic", "i", "for_no_init", "j", "start", "end", "for_no_condition", "k", "for_no_update", "n", "for_all_omitted", "count", "loop", "done", "for_in_object", "obj", "a", "b", "key", "=", "for_in_array", "arr", "idx", "for_multiple_clauses", ",", "for_continue_break", "x", "for_nested", "outer", "inner", "for_existing_var", "z", "for_single_statement_body", "q"
Push constant0
Trace
Push constant1
Push 0
DefineLocal
loc0002:Push constant1
GetVariable
Push 3
Less2
Not
If loc0000
Push constant1
GetVariable
Trace
loc0001:Push constant1
Push constant1
GetVariable
Increment
SetVariable
Jump loc0002
loc0000:Push constant2
Trace
Push constant3
Push 3
DefineLocal
Push constant4
Trace
loc0005:Push constant3
GetVariable
Push 6
Less2
Not
If loc0003
Push constant3
GetVariable
Trace
loc0004:Push constant3
Push constant3
GetVariable
Increment
SetVariable
Jump loc0005
loc0003:Push constant5
Trace
Push constant6
Trace
Push constant7
Push 0
DefineLocal
loc0008:Push constant7
GetVariable
Trace
Push constant7
GetVariable
Push 3
Less2
Not
Not
If loc0009
Jump loc0006
loc0009:loc0007:Push constant7
Push constant7
GetVariable
Increment
SetVariable
Jump loc0008
loc0006:Push constant8
Trace
Push constant9
Push 0
DefineLocal
loc000c:Push constant9
GetVariable
Push 3
Less2
Not
If loc000a
Push constant9
GetVariable
Trace
Push constant9
Push constant9
GetVariable
Increment
SetVariable
loc000b:Jump loc000c
loc000a:Push constant10
Trace
Push constant11
Push 0
DefineLocal
loc000f:Push constant12
Trace
Push constant11
Push constant11
GetVariable
Increment
SetVariable
Push constant11
GetVariable
Push 3
Equals2
Not
If loc0010
Jump loc000d
loc0010:loc000e:Jump loc000f
loc000d:Push constant13
Trace
Push constant14
Trace
Push constant15
Push 0
InitObject
DefineLocal
Push constant15
GetVariable
Push constant16
Push 10
SetMember
Push constant15
GetVariable
Push constant17
Push 20
SetMember
Push constant15
GetVariable
Enumerate2
loc0012:StoreRegister 0
Push null
Equals2
If loc0011
Push constant18
Push register0
DefineLocal
Push constant18
GetVariable
Push constant19
Add2
Push constant15
GetVariable
Push constant18
GetVariable
GetMember
Add2
Trace
Jump loc0012
loc0011:Push constant20
Trace
Push constant21
Push 7
Push 6
Push 5
Push 3
InitArray
DefineLocal
Push constant22
DefineLocal2
Push constant21
GetVariable
Enumerate2
loc0014:StoreRegister 0
Push null
Equals2
If loc0013
Push constant22
Push register0
SetVariable
Push constant22
GetVariable
Push constant19
Add2
Push constant21
GetVariable
Push constant22
GetVariable
GetMember
Add2
Trace
Jump loc0014
loc0013:Push constant23
Trace
Push constant16
Push 0
DefineLocal
Push constant17
Push 3
DefineLocal
loc0017:Push constant16
GetVariable
Push constant17
GetVariable
Less2
Not
If loc0015
Push constant16
GetVariable
Push constant24
Add2
Push constant17
GetVariable
Add2
Trace
loc0016:Push constant16
Push constant16
GetVariable
Increment
SetVariable
Push constant17
Push constant17
GetVariable
Decrement
SetVariable
Jump loc0017
loc0015:Push constant25
Trace
Push constant26
Push 0
DefineLocal
loc001a:Push constant26
GetVariable
Push 10
Less2
Not
If loc0018
Push constant26
GetVariable
Push 5
Equals2
Not
If loc001b
Jump loc0018
loc001b:Push constant26
GetVariable
Push 2
Modulo
Push 1
Equals2
Not
If loc001c
Jump loc0019
loc001c:Push constant26
GetVariable
Trace
loc0019:Push constant26
Push constant26
GetVariable
Increment
SetVariable
Jump loc001a
loc0018:Push constant27
Trace
Push constant28
Push 0
DefineLocal
loc001f:Push constant28
GetVariable
Push 2
Less2
Not
If loc001d
Push constant29
Push 0
DefineLocal
loc0022:Push constant29
GetVariable
Push 2
Less2
Not
If loc0020
Push constant28
GetVariable
Push constant24
Add2
Push constant29
GetVariable
Add2
Trace
loc0021:Push constant29
Push constant29
GetVariable
Increment
SetVariable
Jump loc0022
loc0020:loc001e:Push constant28
Push constant28
GetVariable
Increment
SetVariable
Jump loc001f
loc001d:Push constant30
Trace
Push constant31
DefineLocal2
Push constant31
Push 1
SetVariable
loc0025:Push constant31
GetVariable
Push 3
Greater
Not
Not
If loc0023
Push constant31
GetVariable
Trace
loc0024:Push constant31
Push constant31
GetVariable
Increment
SetVariable
Jump loc0025
loc0023:Push constant32
Trace
Push constant33
Push 0
DefineLocal
loc0028:Push constant33
GetVariable
Push 3
Less2
Not
If loc0026
Push constant33
GetVariable
Trace
loc0027:Push constant33
Push constant33
GetVariable
Increment
SetVariable
Jump loc0028
loc0026:
