crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@function_hoisting.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/function_hoisting.as
---
ConstantPool "function within a function!", "first function!", "functionWithinAFunction", "firstVar = ", "firstVar", ", secondVar = ", "secondVar", "second function!", "second function! (but redefined!)", "third function!", "Unused function!", "firstFunction", "secondFunction", "thirdFunction"
DefineFunction "firstFunction", 0 {
DefineFunction "functionWithinAFunction", 0 {
Push constant0
Trace
}
Pop
Push constant1
Trace
Push 0
Push constant2
CallFunction
Pop
Push constant3
Push constant4
GetVariable
Add2
Push constant5
Add2
Push constant6
GetVariable
Add2
Trace
}
Pop
DefineFunction "secondFunction", 0 {
Push constant7
Trace
Push constant3
Push constant4
GetVariable
Add2
Push constant5
Add2
Push constant6
GetVariable
Add2
Trace
}
Pop
DefineFunction "secondFunction", 0 {
Push constant8
Trace
Push constant3
Push constant4
GetVariable
Add2
Push constant5
Add2
Push constant6
GetVariable
Add2
Trace
}
Pop
DefineFunction "thirdFunction", 0 {
Push constant9
Trace
}
Pop
DefineFunction "unusedFunction", 0 {
Push constant10
Trace
}
Pop
Push constant4
Push 1
DefineLocal
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push constant6
Push 2
DefineLocal
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push 0
Push constant11
CallFunction
Pop
Push 0
Push constant12
CallFunction
Pop
Push 0
Push constant2
CallFunction
Pop
Push 0
Push constant13
CallFunction
Pop
