crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@nested_break_continue.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/nested_break_continue.as
---
ConstantPool "i", "i = ", "j", "fn", "trying to break from fn", "j = "
Push constant0, 0
DefineLocal
loc0002:Push constant0
GetVariable
Push 4
Less2
Not
If loc0000
Push constant1, constant0
GetVariable
Add2
Trace
Push constant2, 0
DefineLocal
loc0005:Push constant2
GetVariable
Push 4
Less2
Not
If loc0003
Push constant3
DefineFunction "", 0 {
Push constant4
Trace
}
DefineLocal
Push constant5, constant2
GetVariable
Add2
Trace
Push constant2
GetVariable
Push 1
Equals2
Not
If loc0006
Push 0, constant3
CallFunction
Pop
Jump loc0004
loc0006:Push constant2
GetVariable
Push 2
Equals2
Not
If loc0007
Jump loc0003
loc0007:loc0004:Push constant2, constant2
GetVariable
Increment
SetVariable
Jump loc0005
loc0003:Push constant0
GetVariable
Push 1
Equals2
Not
If loc0008
Jump loc0001
loc0008:Push constant0
GetVariable
Push 2
Equals2
Not
If loc0009
Jump loc0000
loc0009:loc0001:Push constant0, constant0
GetVariable
Increment
SetVariable
Jump loc0002
loc0000:
