crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@objects.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: builder
input_file: samples/as2/objects.as
---
ConstantPool "o", "b", "Object", "a", "o.a: ", "o.b: ", "new Object(): ", "new Object(1, 2, {}, false): ", "new Object: ", "new o.b(): "
Push constant0
Push constant1
Push constant2
GetVariable
Push constant3
Push 1
Push 2
InitObject
DefineLocal
Push constant4
Push constant0
GetVariable
Push constant3
GetMember
Add2
Trace
Push constant5
Push constant0
GetVariable
Push constant1
GetMember
Add2
Trace
Push constant6
Push 0
Push constant2
NewObject
Add2
Trace
Push constant7
Push false
Push 0
InitObject
Push 2
Push 1
Push 4
Push constant2
NewObject
Add2
Trace
Push constant8
Push 0
Push constant2
NewObject
Add2
Trace
Push constant9
Push 0
Push constant0
GetVariable
Push constant1
NewMethod
Add2
Trace
